src/test/ui/const-generics/const-param-type-depends-on-type-param-ungated.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-param-type-depends-on-type-param-ungated.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0741]: the types of const generic parameters must derive `PartialEq` and `Eq`
  --> $DIR/const-param-type-depends-on-type-param-ungated.rs:6:22
   |
LL | struct B<T, const N: T>(PhantomData<[T; N]>);
   |                      ^ `T` doesn't derive both `PartialEq` and `Eq`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0741`.
